# kstacker

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml
docs/: conf.py  index.rst
example/: Parameters_test_HD95086.yml  parameters_HD95086.yml  slurm_launch_brute_force.sh  slurm_launch_noise_prof.sh  slurm_launch_reopt.sh
example/images/: image_0.fits  image_1.fits  image_2.fits  image_3.fits
kstacker/: __init__.py  _utils.pyx  best_solutions.py  cli.py  compute_snr.py  gradient_reoptimization.py  noise_profile.py  optimize.py  utils.py
kstacker/coronagraph/: __init__.py  corono.py  mask.py  phase.py  pupil.py  stop.py
kstacker/imagerie/: __init__.py  _photometry.pyx  analyze.py  imagerie.py  noise.py  psf.py
kstacker/orbit/: __init__.py  orbit.py  orbit_HLC.py  plot.py
kstacker/orbit/tests/: test_orbit.py
parameters/: near_alphacenA_b.yml  near_alphacenA_b_fast.yml
src/kstacker/: Matrix_Likelihood.py  _utils.pyx  cli.py  gradient_reoptimization.py  likelihood.py  mcmc_reoptimization.py  noise_profile.py  optimize.py  run_matrix_mcmc.py  snr.py  utils.py
src/kstacker/coronagraph/: phase.py
src/kstacker/imagerie/: __init__.py  analyze.py
src/kstacker/orbit/: __init__.py  orbit.py  orbit_HLC.py  plot.py
tests/: conftest.py  test_optimize.py  test_orbit.py  test_proba_detection.py  test_profiles.py  test_run.py  test_snr.py  test_utils.py
