[build-system]
requires = ["setuptools>=42",
            "setuptools_scm[toml]>=3.4",
            "wheel",
            "cython",
            "oldest-supported-numpy",
            "extension-helpers"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/kstacker/version.py"

[tool.black]
line-length = 88
target-version = ['py37']
preview = true
