[metadata]
name = kstacker
author = Hervé Le Coroller et al
author_email = herve.lecoroller@lam.fr
# license = Other
# license_file = LICENSE.rst
url = https://gitlab.lam.fr/RHCI/kstacker
description = todo
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    pyyaml

[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.entry_points]
console_scripts =
    kstacker = kstacker.cli:main

[tool:pytest]
testpaths = "kstacker" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[flake8]
max-line-length = 88
ignore = W503,E203,E501,E731,E741

[isort]
profile = black
known_third_party=astropy,pyyaml

[coverage:run]
omit =
  kstacker/__init*
  kstacker/conftest.py
  kstacker/*setup_package*
  kstacker/tests/*
  kstacker/*/tests/*
  kstacker/extern/*
  kstacker/version*
  */kstacker/__init*
  */kstacker/conftest.py
  */kstacker/*setup_package*
  */kstacker/tests/*
  */kstacker/*/tests/*
  */kstacker/extern/*
  */kstacker/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
